--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,50 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// *= require font-awesome
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    text-align: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+	background-image: linear-gradient(45deg, #F093FB 0%, #F5576C 100%);
+	font-family: 'Nunito', sans-serif;
+	color: white;
+	h1 {
+		font-size: 4em;
+		width: 100%;
+	}
+	.title_container {
+		margin-top: 50%;
+	}
+	img {
+		width: 100%;
+	}
+
+	.btn_container {
+		width: 100%;
+		margin-top: 50%;
+		.btn {
+			font-size: 2.3em;
+			text-align: center;
+			-webkit-border-radius: 4;
+			-moz-border-radius: 4;
+			border-radius: 10px;
+			font-family: Arial;
+			color: #F46DA0;
+			background: #ffffff;
+			padding: 34px 70px 34px 70px;
+			text-decoration: none;
+		}
+	}
+
+	.looks_container {
+		padding: 0 10px;
+		.picture_container {
+			padding: 10px;
+		}
+	}
+}
