--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -1,3 +1,3 @@
 <div class="container-fluid">
-  <%= react_component 'Main', { looks: @looks } %>
+  <%= react_component 'Main', { looks: @looks, user_id: @user_id } %>
 </div>
